--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -45,10 +45,15 @@ Imagine that you are a novice cook and you have to decide what meal to prepare f
 We often have to choose between *exploration* and *exploitation*: that is, actions that could (a) lead to an overt, readily accessible reward based on what we already know (*exploitation*) or (b) result in the discovery of new information (*exploration*; @sutton1998). This decision of whether to explore or exploit is directly related to the relative strength of the goals within a particular context. In the cooking example, I can prioritize the goal of learning by cooking the new recipe, or I can instead emphasize the performance goal by preparing the tried and true meal. 
 Here, we explore the idea of this goal tradeoff in a simple active learning context, where social factors may affect the goals we consider.
 
+```{r image, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=2, set.cap.width=T, num.cols.cap=1, fig.cap = "An example of the toy used in our paradigm."}
+img <- png::readPNG("figs/toywlabel.png")
+grid::grid.raster(img)
+```
+
 We present a formal account of social-active learning, and situate it within two theoretical frameworks: *active learning* and *pragmatic social reasoning*. 
 Active learning refers to situations where people are given control over the sequence of information in a learning context (e.g. try pressing different buttons on a toy, one by one, to see whether it produces an effect). The key assumption is that learners will maximize the usefulness of their actions by gathering information that is especially helpful for their own learning. The effects of active learning have been the focus of much empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human], with the common finding that active contexts lead to more rapid learning when compared to passive contexts where people do not have control over the flow of information. 
 
-```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Diagram of the computational model. The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. The learning goal favors a single action (e.g. pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence or knowledge of how the toy works)."}
+```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Diagram of the computational model. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. The learning goal favors a single action (e.g. pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence or knowledge of how the toy works)."}
 img1 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsAbs.png"))), 
                     interpolate = FALSE)
 
@@ -66,13 +71,13 @@ We instantiate the predictions of our model in a simple causal learning task and
 
 # Computational model
 
-To examine people's learning-performance tradeoff, 
+To examine the learning-performance tradeoff, 
 we situated our model and paradigm in a simple learning environment.
 The learner in our model has a toy that he can act on,
 and can choose between two kinds of actions
 that will each lead to one outcome (new discovery) or the other (immediate reward).
 The learner's action rests on his goals to explore versus exploit, 
-which in turn are determined in part by the presence or absence of another person he cares about (i.e. his boss)\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}.
+which in turn are determined in part by the presence or absence of another person he cares about (i.e. his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
 
 A key assumption underlying inferences in recent Bayesian models of human social cognition is that 
 people act approximately optimally given a utility function [e.g. @goodman2016; @jara2016]. 
@@ -85,15 +90,17 @@ his desire to learn how a toy works (*learning utility*),
 to make the toy operate and perform a given function (*performance utility*), 
 or to present himself as a competent individual who knows how to make the toy work (*presentational utility*; see the model diagram in Figure 1).
 
-First, the *learning utility* symbolizes the goal to learn new information, which in our paradigm specifically is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the *expected utility* of different information seeking actions. Here we follow the mathematical details of the OED approach as outlined in @coenen2017 that was implemented in our model. The set of queries, each realized through taking an action, is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer $P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
+### Learning utility
+
+The *learning utility* symbolizes the goal to learn new information, which in our paradigm specifically is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the *expected utility* of different information seeking actions. Here we follow the mathematical details of the OED approach as outlined in @coenen2017. The set of queries, each realized through taking an action, is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer $P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
 
 $$EU(Q) = \sum_{a\in q}{P(a)U(a)}$$
 
-There are a variety of ways to define the usefulness function to score each answer (for a detailed analysis of different approaches, see @nelson2005). One standard method is to use *information gain*, which is defined as the change in the learner's overall uncertainty (difference in entropy) before and after receiving an answer. This information gain is then the usefulness of the answer to the query, and thus is equal to the learning utility ($U_{learn}$):
+There are a variety of ways to define the utility of each answer [for a detailed analysis of different approaches, see @nelson2005]. One standard method is to use *information gain*, which is defined as the change in the learner's overall uncertainty (difference in entropy) before and after receiving an answer. This information gain is then the usefulness of the answer to the query, and thus is equal to the learning utility ($U_{learn}$):
 
 $$ U_{learn} = U(a) = \frac{ent(H) - ent(H|a)}{log_2n}$$
 \noindent
-where $ent(H)$ is defined using Shannon entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}. @mackay2003, which provides a measure of the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses. 
+where $ent(H)$ is defined using Shannon entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}. We measure the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses as defined by @mackay2003: 
 
 $$ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}$$
 \noindent
@@ -111,7 +118,9 @@ Finally, the difference in entropy is normalized by $log_2 n$.
 The learner performs the expected utility computation for each query in the set of possible queries and picks the one that maximizes utility. In practice, the learner considers each possible answer, scores the answer with the usefulness function, and weights the score using the probability of getting that answer. 
 In our paradigm, a learner thinking about the learning utility considers acting on the toy one way over another, and computes how informative a given answer should be in reducing uncertainty about how the toy works.
 
-Second, the *performance utility* is the utility of successfully making the toy operate and achieving an immediate rewarding outcome. 
+### Performance utility
+
+The *performance utility* is the utility of successfully making the toy operate and achieving an immediate rewarding outcome. 
 Specifically within our current paradigm, the performance utility ($U_{perf}$) is the expected likelihood of performance (e.g. turning on music; $m$) given the learner's action $a$. 
 
 $$ U_{perf} = P_L(m | a) $$
@@ -123,6 +132,8 @@ When there is no observer present, the learner considers the tradeoff between th
 $$ U(a;\phi; obs = no) = \phi_{learn} \cdot U_{learn} + \phi_{perf} \cdot U_{perf} ,$$
 \noindent
 where $\phi$ is a mixture parameter governing the extent to which the learner prioritizes information gain over immediate reward. 
+
+### Presentation utility
 
 When there is another person present to observe the learner's action, this observer $O$ is expected to reason about the competence $c$ of the learner $L$ which is equal to whether the learner was able to make the toy produce an effect.
 
@@ -144,14 +155,14 @@ $$ P_L(a | \phi, obs) \propto \exp(\lambda \cdot \mathbb{E}[U(a;\phi; obs)])$$
 d_e1 <- d %>% filter(str_detect(experiment, "e1"))
 ```
 
-```{r e1_behav_results_plot, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Behavioral results for E1. Panel A shows the proportion of action decisions for each goal condition. Error bars represent 95\\% binomial confidence intervals computed using Bayesian inference. Panel B shows violin plots of participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. Panel C shows violin plots of participants' belief change (entropy) as a function of condition. Lower values represent higher certainty after selecting an action. Color in panels A and C represent the type of action participants selected."}
+```{r e1_behav_results_plot, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Behavioral results for E1. Panel A shows the proportion of action decisions for each goal condition. Error bars represent 95\\% binomial confidence intervals computed using a Bayesian beta-binomial model. Panel B shows violin plots of participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. Panel C shows violin plots of participants' belief change (entropy) as a function of condition. Lower values represent higher certainty after selecting an action. Color in panels A and C represent the type of action participants selected."}
 png::readPNG(here::here(image_path, "e1_plot.png")) %>% 
   grid::grid.raster()
 ```
 
 In Experiment 1, we first wanted to confirm that participants would choose different actions depending on the kind of goal that was highlighted. We were also interested in how people would act when no goal was specified. Importantly, participants were limited to selecting a single action, which meant the opportunity cost for the alternative action was at its highest. Specifically, participants were asked to imagine that they needed to act on a toy with an uncertain causal mechanism, and we assigned them to different goal conditions: (1) learning ("learn how the toy works"), (2) performance ("make the toy play music"), (3) presentation ("impress their boss"), and (4) no goal specified. 
 
-We hypothesized that participants would choose an informative action more often in the following order of goal conditions (decreasing): learning, no goal, performance, and presentation\footnote{Our hypothesis and method were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau)}.
+We hypothesized that participants would choose an informative action more often in the following order of goal conditions (decreasing): learning, no goal, performance, and presentation\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau)}.
 
 ## Method
 
@@ -177,27 +188,22 @@ We recruited `r n_run` participants (roughly 50 for each condition) on Amazon’
 
 ### Stimuli and Design
 
-We presented images of three different toys that look very similar but each work in different ways, and provided instructions for them (see top of Fig. 1 for what the toys looked like).
+We presented images of three different toys that look very similar but each work in different ways, and provided instructions for them (see Figure 1).
+Based on the instructions, doing both button press and handle pull was immediately rewarding but uninformative (as it does not disambiguate the causal mechanism in any way), whereas either of the single actions was completely disambiguating, but was uncertain to produce an immediate outcome. Each toy had a label at the front, indicating which action(s) will make the toy operate, and with which outcome effect.
 
-- Toy 1: *"Pull the handle on the left to turn on the light. Press the button on the right to play music. Doing both produces both effects at the same time."*
-
-- Toy 2: *"Pull the handle on the left to play music. Press the button on the right to turn on the light. Doing both produces both effects at the same time."* 
-
-- Toy 3: *"Pull the handle on the left AND press the button on the right to turn on the light and play music at the same time. The button press or handle pull on its own doesn’t produce any effect."* 
-
-Thus, doing both button press and handle pull was immediately rewarding but uninformative (as it does not disambiguate the causal mechanism in any way), whereas either of the single actions was completely disambiguating, but was uncertain to produce an immediate outcome. Each toy had a label at the front, indicating which action(s) will make the toy operate, and with which outcome effect.
-
-We asked participants to act on one of these toys; importantly, the given toy was missing its label, such that partcipants could not know whether the toy was Toy 1, 2 or 3. We assigned participants into four goal conditions. For participants in *learning*, *performance*, and *presentation* conditions,we asked them to imagine that they were children's toy developers and that one day their boss approached them. We then instructed participants to: figure out the correct label for the toy (*learning* condition); make the toy play music (or turn the light on; *performance* condition); or impress their boss and show that they are competent (*presentation* condition). In *no-goal* condition, participants were asked to select an action. We asked participants to select an action they would like to try out on the toy in order to accomplish the specified goal, out of three possible actions: to "press the button", "pull the handle", or "press the button and pull the handle." We randomly assigned each participant to one of the three goal conditions, and randomized the order of actions to choose from.
+We asked participants to act on one of these toys; importantly, the given toy was missing its label, such that partcipants could not know whether the toy was Toy 1, 2 or 3. We assigned participants into four goal conditions. In *no-goal* condition, participants were asked to select an action without any goal specified. In *learning*, *performance*, and *presentation* conditions, we asked participants to imagine that they were children's toy developers and that one day their boss approached them. We then instructed participants to: figure out the correct label for the toy (*learning* condition); make the toy play music (or turn the light on; *performance* condition); or impress their boss and show that they are competent (*presentation* condition). We asked participants to select an action they would like to try out on the toy in order to accomplish the specified goal (if any), out of three possible actions: to "press the button", "pull the handle", or "press the button and pull the handle." We randomly assigned each participant to one of the four goal conditions, and randomized the order of actions to choose from.
 
 ### Procedure
 
-We first introduced participants to the task, and showed them a picture of a possible toy with labels on its different parts. Then they read instructions for each of the three toy types. We presented Toy 1 and Toy 2 instructions in a randomized order first, and then Toy 3 instructions. Afterwards, they were asked what they would do to make the toy operate as manipulation check (e.g. "How would you make the toy play music?"). We asked participants to rate prior likelihood that an unknown toy is Toy 1, 2, or 3, to use as priors for our model. Participants then read a scenario for one of the three goal conditions, followed by the question: "If you only had one chance to try a SINGLE action to [pursue the specified goal], which action would you want to take? You will get a 10 cent bonus ... if you [achieve the given goal]." After selecting one of three possible actions to perform on the toy and seeing that the toy successfully played music, participants were asked again to rate the likelihood that the unlabeled toy was each of the three possible toys.
+In the initial *exposure phase*, we first showed participants a picture of a possible toy with labels on its different parts (Figure FIXME). Then they read instructions for each of the three toy types. We presented Toy 1 and Toy 2 instructions in a randomized order first, and then Toy 3 instructions. Afterwards, they were asked what they would do to make the toy operate as manipulation check (e.g. "How would you make the toy play music?"). 
+
+In the *test phase*, we first asked participants to rate prior likelihood that an unknown toy is Toy 1, 2, or 3, to use as priors for our model. Participants then read a scenario for one of the three goal conditions, followed by the question: "If you only had one chance to try a SINGLE action to [pursue the specified goal], which action would you want to take? You will get a 10 cent bonus ... if you [achieve the given goal]." After selecting one of three possible actions to perform on the toy and seeing that the toy successfully played music, participants were asked again to rate the likelihood that the unlabeled toy was each of the three possible toys.
 
 ## Results and discussion
 
 ### Analysis plan
 
-First, we present behavioral analyses of participants' (1) action decisions, (2) action decision times, and (3) belief change (i.e., learning) ^[See (https://osf.io/kcjau) for a pre-registration of the analysis plan.]. Decision times correspond to the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space). We quantified participants' beliefs about the possible toy designs using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
+We present behavioral analyses of participants' (1) action decisions, (2) action decision times, and (3) belief change (i.e., learning). Decision times correspond to the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space). We quantified participants' beliefs about the possible toy designs using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
 
 We used the `rstanarm` [@gabry2016rstanarm] package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model. All analysis code for the statistical models can be found in the online repository for this project: https://github.com/kemacdonald/soc-info/R/03_models.Rmd. 
 
@@ -229,7 +235,7 @@ ms_act_e1 <- d_models$action_logit_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition$} with the No-Goal condition as the reference category. Participants' tendency to select a "single" action varied across conditions in the predicted pattern (see Panel A of Fig 2), with the highest proportion occuring in the Learning context ($M_{learn} =$ `r ms_act_e1$prop[1] * 100`%, [`r ms_act_e1$hdi_lower[1] * 100`%, `r ms_act_e1$hdi_upper[1] * 100`%]), followed by the No Goal context ($M_{noGoal} =$ `r ms_act_e1$prop[2] * 100`%, [`r ms_act_e1$hdi_lower[2] * 100`%, `r ms_act_e1$hdi_upper[2] * 100`%]), then Performance ($M_{perform} =$ `r ms_act_e1$prop[3] * 100`%, [`r ms_act_e1$hdi_lower[3] * 100`%, `r ms_act_e1$hdi_upper[3] * 100`%]), and the fewest single actions in the Presentation condtion ($M_{present} =$ `r ms_act_e1$prop[4] * 100`%, [`r ms_act_e1$hdi_lower[4] * 100`%, `r ms_act_e1$hdi_upper[4] * 100`%]). 
+We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition$} with the No-Goal condition as the reference category. Participants' tendency to select a "single" action varied across conditions in the predicted pattern (see Panel A of Fig 2), with the highest proportion occuring in the Learning context, followed by the No Goal context, then Performance, and the fewest single actions in the Presentation condition. 
 
 Compared to the No-Goal condition, participants selected the single action at a greater rate in the Learning condition ($\beta$ = `r e1_contrasts_act$prop[1]`, [`r e1_contrasts_act$hdi_lower[1]`, `r e1_contrasts_act$hdi_upper[1]`]) and at lower rate in the Presentation context ($\beta$ = `r e1_contrasts_act$prop[4]`, [`r e1_contrasts_act$hdi_lower[4]`, `r e1_contrasts_act$hdi_upper[4]`]), with the null value of zero difference condition falling well outside the 95% HDI, and at similar rate in the Performance condition ($\beta$ = `r e1_contrasts_act$prop[3]`, [`r e1_contrasts_act$hdi_lower[3]`, `r e1_contrasts_act$hdi_upper[3]`]) with the 95% HDI including the null.
 
@@ -259,7 +265,7 @@ ms_rt_e1 <- d_models$rt_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 1) 
 ```
 
-We analyzed response times in log space using the same model specification. Panel A of Figure 2 shows the full RT data distribution. On average, participants took `r ms_rt_e1$rt[2]` seconds to generate a response in the No-goal condidition. Participants took on on average `r e1_contrasts_rt$rt[1]` seconds [`r e1_contrasts_rt$hdi_lower[1]`, `r e1_contrasts_rt$hdi_upper[1]`] longer to generate a decision in the Learning condition, but produced similar response times in the Performance ($M_{perform}$ = `r ms_rt_e1$rt[3]`, [`r ms_rt_e1$hdi_lower[3]`, `r ms_rt_e1$hdi_upper[3]`]) and Presentation ($M_{present}$ = `r ms_rt_e1$rt[4]`, [`r ms_rt_e1$hdi_lower[1]`, `r ms_rt_e1$hdi_upper[4]`]) conditions.
+We analyzed response times in log space using the same model specification. Panel A of Figure 2 shows the full RT data distribution. Compared to the No-Goal condition, participants took on on average `r e1_contrasts_rt$rt[1]` seconds longer to generate a decision in the Learning condition, but produced similar response times in the Performance and Presentation conditions.
 
 ### Belief change:
 
@@ -382,7 +388,7 @@ ms_act_e2 <- d_models$action_logit_samples_e2 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the No-Goal and No-Social condition as the reference category. We replicated the key finding from E1: participants tended to select the "single" action more often when they were within a context that emphasized a learning goal ($M_{learn} =$ `r ms_act_e2$prop[1] * 100`%, [`r ms_act_e2$hdi_lower[1] * 100`%, `r ms_act_e2$hdi_upper[1] * 100`%]), followed by the No Goal context ($M_{noGoal} =$ `r ms_act_e2$prop[3] * 100`%, [`r ms_act_e2$hdi_lower[3] * 100`%, `r ms_act_e2$hdi_upper[3] * 100`%]), then Performance ($M_{perform} =$ `r ms_act_e2$prop[5] * 100`%, [`r ms_act_e2$hdi_lower[5] * 100`%, `r ms_act_e2$hdi_upper[5] * 100`%]), with the fewest single actions generated in the Presentation condtion ($M_{present} =$ `r ms_act_e2$prop[7] * 100`%, [`r ms_act_e2$hdi_lower[7] * 100`%, `r ms_act_e2$hdi_upper[7] * 100`%]). 
+We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the No-Goal and No-Social condition as the reference category. We replicated the key finding from E1: participants tended to select the "single" action more often when they were within a context that emphasized a learning goal, followed by the No Goal context, then Performance, with the fewest single actions generated in the Presentation condtion. 
 
 There was a main efffect of social context, with participants being less likely to select the single action when their boss was present ($\beta =$ `r e2_contrasts_act_soc$prop[5]`, [`r e2_contrasts_act_soc$hdi_lower[5]`, `r e2_contrasts_act_soc$hdi_upper[5]`]). Finally, there was evidence for a reliable interaction between goal condition and social context such that the effect of social context was present in the Learning and No-Goal conditions, but not in the Performance condition ($\beta$ $_{int}$ = `r e2_contrasts_act$prop[4]`, [`r e2_contrasts_act$hdi_lower[4]`, `r e2_contrasts_act$hdi_upper[4]`]).
 
