--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -103,6 +103,17 @@ instead emphasize the performance goal by preparing the tried and true
 meal. Here, we explore the idea of this goal tradeoff in a simple active
 learning context, where social factors may affect the goals we consider.
 
+\begin{CodeChunk}
+\captionsetup{width=0.8\columnwidth}\begin{figure}[b]
+
+{\centering \includegraphics{figs/image-1} 
+
+}
+
+\caption[An example of the toy used in our paradigm]{An example of the toy used in our paradigm.}\label{fig:image}
+\end{figure}
+\end{CodeChunk}
+
 We present a formal account of social-active learning, and situate it
 within two theoretical frameworks: \emph{active learning} and
 \emph{pragmatic social reasoning}. Active learning refers to situations
@@ -125,7 +136,7 @@ information.
 
 }
 
-\caption[Diagram of the computational model]{Diagram of the computational model. The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. The learning goal favors a single action (e.g. pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence or knowledge of how the toy works).}\label{fig:model_diagram}
+\caption[Diagram of the computational model]{Diagram of the computational model. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. The learning goal favors a single action (e.g. pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence or knowledge of how the toy works).}\label{fig:model_diagram}
 \end{figure*}
 \end{CodeChunk}
 
@@ -166,14 +177,14 @@ cognitive model of social-active learning.
 
 \section{Computational model}\label{computational-model}
 
-To examine people's learning-performance tradeoff, we situated our model
-and paradigm in a simple learning environment. The learner in our model
-has a toy that he can act on, and can choose between two kinds of
-actions that will each lead to one outcome (new discovery) or the other
+To examine the learning-performance tradeoff, we situated our model and
+paradigm in a simple learning environment. The learner in our model has
+a toy that he can act on, and can choose between two kinds of actions
+that will each lead to one outcome (new discovery) or the other
 (immediate reward). The learner's action rests on his goals to explore
 versus exploit, which in turn are determined in part by the presence or
 absence of another person he cares about (i.e.~his
-boss)\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}.
+boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
 
 A key assumption underlying inferences in recent Bayesian models of
 human social cognition is that people act approximately optimally given
@@ -190,35 +201,36 @@ function (\emph{performance utility}), or to present himself as a
 competent individual who knows how to make the toy work
 (\emph{presentational utility}; see the model diagram in Figure 1).
 
-First, the \emph{learning utility} symbolizes the goal to learn new
+\subsubsection{Learning utility}\label{learning-utility}
+
+The \emph{learning utility} symbolizes the goal to learn new
 information, which in our paradigm specifically is associated with
 figuring out how a given toy works. The learning utility is formally
 represented by an OED model (Lindley, 1956; ``Optimal Experiment
 Design''; Nelson, 2005), which quantifies the \emph{expected utility} of
 different information seeking actions. Here we follow the mathematical
 details of the OED approach as outlined in Coenen, Nelson, \& Gureckis
-(2017) that was implemented in our model. The set of queries, each
-realized through taking an action, is defined as
-\(Q_1, Q_2, ..., Q_n = {Q}\). The expected utility of each query
-(\(EU(Q)\)) is a function of two factors: (1) the probability of
+(2017). The set of queries, each realized through taking an action, is
+defined as \(Q_1, Q_2, ..., Q_n = {Q}\). The expected utility of each
+query (\(EU(Q)\)) is a function of two factors: (1) the probability of
 obtaining a specific answer \(P(a)\) weighted by (2) the usefulness of
 that answer for achieving the learning goal \(U(a)\).
 
 \[EU(Q) = \sum_{a\in q}{P(a)U(a)}\]
 
-There are a variety of ways to define the usefulness function to score
-each answer (for a detailed analysis of different approaches, see Nelson
-(2005)). One standard method is to use \emph{information gain}, which is
-defined as the change in the learner's overall uncertainty (difference
-in entropy) before and after receiving an answer. This information gain
-is then the usefulness of the answer to the query, and thus is equal to
-the learning utility (\(U_{learn}\)):
+There are a variety of ways to define the utility of each answer (for a
+detailed analysis of different approaches, see Nelson, 2005). One
+standard method is to use \emph{information gain}, which is defined as
+the change in the learner's overall uncertainty (difference in entropy)
+before and after receiving an answer. This information gain is then the
+usefulness of the answer to the query, and thus is equal to the learning
+utility (\(U_{learn}\)):
 
 \[ U_{learn} = U(a) = \frac{ent(H) - ent(H|a)}{log_2n}\] \noindent
 where \(ent(H)\) is defined using Shannon
 entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}.
-MacKay (2003), which provides a measure of the overall amount of
-uncertainty in the learner's beliefs about the candidate hypotheses.
+We measure the overall amount of uncertainty in the learner's beliefs
+about the candidate hypotheses as defined by MacKay (2003):
 
 \[ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}\] \noindent
 The conditional entropy computation is the same, but takes into account
@@ -242,11 +254,13 @@ about the learning utility considers acting on the toy one way over
 another, and computes how informative a given answer should be in
 reducing uncertainty about how the toy works.
 
-Second, the \emph{performance utility} is the utility of successfully
-making the toy operate and achieving an immediate rewarding outcome.
-Specifically within our current paradigm, the performance utility
-(\(U_{perf}\)) is the expected likelihood of performance (e.g.~turning
-on music; \(m\)) given the learner's action \(a\).
+\subsubsection{Performance utility}\label{performance-utility}
+
+The \emph{performance utility} is the utility of successfully making the
+toy operate and achieving an immediate rewarding outcome. Specifically
+within our current paradigm, the performance utility (\(U_{perf}\)) is
+the expected likelihood of performance (e.g.~turning on music; \(m\))
+given the learner's action \(a\).
 
 \[ U_{perf} = P_L(m | a) \] \noindent
 Thus, performance utility is maximized by taking an action that is most
@@ -261,6 +275,8 @@ his action based on a weighted combination of the two utilities:
 \noindent
 where \(\phi\) is a mixture parameter governing the extent to which the
 learner prioritizes information gain over immediate reward.
+
+\subsubsection{Presentation utility}\label{presentation-utility}
 
 When there is another person present to observe the learner's action,
 this observer \(O\) is expected to reason about the competence \(c\) of
@@ -293,7 +309,7 @@ action \(a\) approximately optimally (as per optimality parameter
 
 }
 
-\caption[Behavioral results for E1]{Behavioral results for E1. Panel A shows the proportion of action decisions for each goal condition. Error bars represent 95\% binomial confidence intervals computed using Bayesian inference. Panel B shows violin plots of participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. Panel C shows violin plots of participants' belief change (entropy) as a function of condition. Lower values represent higher certainty after selecting an action. Color in panels A and C represent the type of action participants selected.}\label{fig:e1_behav_results_plot}
+\caption[Behavioral results for E1]{Behavioral results for E1. Panel A shows the proportion of action decisions for each goal condition. Error bars represent 95\% binomial confidence intervals computed using a Bayesian beta-binomial model. Panel B shows violin plots of participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. Panel C shows violin plots of participants' belief change (entropy) as a function of condition. Lower values represent higher certainty after selecting an action. Color in panels A and C represent the type of action participants selected.}\label{fig:e1_behav_results_plot}
 \end{figure*}
 \end{CodeChunk}
 
@@ -312,7 +328,7 @@ goal specified.
 We hypothesized that participants would choose an informative action
 more often in the following order of goal conditions (decreasing):
 learning, no goal, performance, and
-presentation\footnote{Our hypothesis and method were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau)}.
+presentation\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau)}.
 
 \subsection{Method}\label{method}
 
@@ -329,81 +345,66 @@ participants were included in our final analysis.
 \subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
 We presented images of three different toys that look very similar but
-each work in different ways, and provided instructions for them (see top
-of Fig. 1 for what the toys looked like).
-
-\begin{itemize}
-\item
-  Toy 1: \emph{``Pull the handle on the left to turn on the light. Press
-  the button on the right to play music. Doing both produces both
-  effects at the same time.''}
-\item
-  Toy 2: \emph{``Pull the handle on the left to play music. Press the
-  button on the right to turn on the light. Doing both produces both
-  effects at the same time.''}
-\item
-  Toy 3: \emph{``Pull the handle on the left AND press the button on the
-  right to turn on the light and play music at the same time. The button
-  press or handle pull on its own doesn't produce any effect.''}
-\end{itemize}
-
-Thus, doing both button press and handle pull was immediately rewarding
-but uninformative (as it does not disambiguate the causal mechanism in
-any way), whereas either of the single actions was completely
-disambiguating, but was uncertain to produce an immediate outcome. Each
-toy had a label at the front, indicating which action(s) will make the
-toy operate, and with which outcome effect.
+each work in different ways, and provided instructions for them (see
+Figure 1). Based on the instructions, doing both button press and handle
+pull was immediately rewarding but uninformative (as it does not
+disambiguate the causal mechanism in any way), whereas either of the
+single actions was completely disambiguating, but was uncertain to
+produce an immediate outcome. Each toy had a label at the front,
+indicating which action(s) will make the toy operate, and with which
+outcome effect.
 
 We asked participants to act on one of these toys; importantly, the
 given toy was missing its label, such that partcipants could not know
 whether the toy was Toy 1, 2 or 3. We assigned participants into four
-goal conditions. For participants in \emph{learning},
-\emph{performance}, and \emph{presentation} conditions,we asked them to
-imagine that they were children's toy developers and that one day their
-boss approached them. We then instructed participants to: figure out the
-correct label for the toy (\emph{learning} condition); make the toy play
-music (or turn the light on; \emph{performance} condition); or impress
-their boss and show that they are competent (\emph{presentation}
-condition). In \emph{no-goal} condition, participants were asked to
-select an action. We asked participants to select an action they would
-like to try out on the toy in order to accomplish the specified goal,
-out of three possible actions: to ``press the button'', ``pull the
-handle'', or ``press the button and pull the handle.'' We randomly
-assigned each participant to one of the three goal conditions, and
-randomized the order of actions to choose from.
+goal conditions. In \emph{no-goal} condition, participants were asked to
+select an action without any goal specified. In \emph{learning},
+\emph{performance}, and \emph{presentation} conditions, we asked
+participants to imagine that they were children's toy developers and
+that one day their boss approached them. We then instructed participants
+to: figure out the correct label for the toy (\emph{learning}
+condition); make the toy play music (or turn the light on;
+\emph{performance} condition); or impress their boss and show that they
+are competent (\emph{presentation} condition). We asked participants to
+select an action they would like to try out on the toy in order to
+accomplish the specified goal (if any), out of three possible actions:
+to ``press the button'', ``pull the handle'', or ``press the button and
+pull the handle.'' We randomly assigned each participant to one of the
+four goal conditions, and randomized the order of actions to choose
+from.
 
 \subsubsection{Procedure}\label{procedure}
 
-We first introduced participants to the task, and showed them a picture
-of a possible toy with labels on its different parts. Then they read
-instructions for each of the three toy types. We presented Toy 1 and Toy
-2 instructions in a randomized order first, and then Toy 3 instructions.
-Afterwards, they were asked what they would do to make the toy operate
-as manipulation check (e.g. ``How would you make the toy play music?'').
-We asked participants to rate prior likelihood that an unknown toy is
-Toy 1, 2, or 3, to use as priors for our model. Participants then read a
-scenario for one of the three goal conditions, followed by the question:
-``If you only had one chance to try a SINGLE action to {[}pursue the
-specified goal{]}, which action would you want to take? You will get a
-10 cent bonus \ldots{} if you {[}achieve the given goal{]}.'' After
-selecting one of three possible actions to perform on the toy and seeing
-that the toy successfully played music, participants were asked again to
-rate the likelihood that the unlabeled toy was each of the three
-possible toys.
+In the initial \emph{exposure phase}, we first showed participants a
+picture of a possible toy with labels on its different parts (Figure
+FIXME). Then they read instructions for each of the three toy types. We
+presented Toy 1 and Toy 2 instructions in a randomized order first, and
+then Toy 3 instructions. Afterwards, they were asked what they would do
+to make the toy operate as manipulation check (e.g. ``How would you make
+the toy play music?'').
+
+In the \emph{test phase}, we first asked participants to rate prior
+likelihood that an unknown toy is Toy 1, 2, or 3, to use as priors for
+our model. Participants then read a scenario for one of the three goal
+conditions, followed by the question: ``If you only had one chance to
+try a SINGLE action to {[}pursue the specified goal{]}, which action
+would you want to take? You will get a 10 cent bonus \ldots{} if you
+{[}achieve the given goal{]}.'' After selecting one of three possible
+actions to perform on the toy and seeing that the toy successfully
+played music, participants were asked again to rate the likelihood that
+the unlabeled toy was each of the three possible toys.
 
 \subsection{Results and discussion}\label{results-and-discussion}
 
 \subsubsection{Analysis plan}\label{analysis-plan}
 
-First, we present behavioral analyses of participants' (1) action
-decisions, (2) action decision times, and (3) belief change (i.e.,
-learning).\footnote{See (\url{https://osf.io/kcjau}) for a
-  pre-registration of the analysis plan.} Decision times correspond to
-the latency to make an action selection as measured from the start of
-the action decision trial (all RTs were analyzed in log space). We
-quantified participants' beliefs about the possible toy designs using
-entropy, and belief change was measured as the difference in entropy
-before and after selecting an action.
+We present behavioral analyses of participants' (1) action decisions,
+(2) action decision times, and (3) belief change (i.e., learning).
+Decision times correspond to the latency to make an action selection as
+measured from the start of the action decision trial (all RTs were
+analyzed in log space). We quantified participants' beliefs about the
+possible toy designs using entropy, and belief change was measured as
+the difference in entropy before and after selecting an action.
 
 We used the \texttt{rstanarm} (Gabry \& Goodrich, 2016) package to fit
 Bayesian regression models estimating the differences across conditions.
@@ -419,12 +420,9 @@ We modeled action decisions using a logistic regression specified as
 \texttt{$action \sim goal\_condition$} with the No-Goal condition as the
 reference category. Participants' tendency to select a ``single'' action
 varied across conditions in the predicted pattern (see Panel A of Fig
-2), with the highest proportion occuring in the Learning context
-(\(M_{learn} =\) 68\%, {[}55\%, 80\%{]}), followed by the No Goal
-context (\(M_{noGoal} =\) 38\%, {[}25\%, 52\%{]}), then Performance
-(\(M_{perform} =\) 27\%, {[}15\%, 40\%{]}), and the fewest single
-actions in the Presentation condtion (\(M_{present} =\) 14\%, {[}6\%,
-25\%{]}).
+2), with the highest proportion occuring in the Learning context,
+followed by the No Goal context, then Performance, and the fewest single
+actions in the Presentation condition.
 
 Compared to the No-Goal condition, participants selected the single
 action at a greater rate in the Learning condition (\(\beta\) = 1.28,
@@ -438,12 +436,10 @@ with the 95\% HDI including the null.
 
 We analyzed response times in log space using the same model
 specification. Panel A of Figure 2 shows the full RT data distribution.
-On average, participants took 31 seconds to generate a response in the
-No-goal condidition. Participants took on on average 12.2 seconds
-{[}4.2, 20{]} longer to generate a decision in the Learning condition,
-but produced similar response times in the Performance (\(M_{perform}\)
-= 27.5, {[}21.9, 33.3{]}) and Presentation (\(M_{present}\) = 27.5,
-{[}37.9, 33.2{]}) conditions.
+Compared to the No-Goal condition, participants took on on average 12.2
+seconds longer to generate a decision in the Learning condition, but
+produced similar response times in the Performance and Presentation
+conditions.
 
 \subsubsection{Belief change:}\label{belief-change}
 
@@ -523,11 +519,8 @@ We modeled action decisions using a logistic regression specified as
 No-Goal and No-Social condition as the reference category. We replicated
 the key finding from E1: participants tended to select the ``single''
 action more often when they were within a context that emphasized a
-learning goal (\(M_{learn} =\) 68\%, {[}57\%, 78\%{]}), followed by the
-No Goal context (\(M_{noGoal} =\) 52\%, {[}41\%, 63\%{]}), then
-Performance (\(M_{perform} =\) 37\%, {[}26\%, 48\%{]}), with the fewest
-single actions generated in the Presentation condtion (\(M_{present} =\)
-8\%, {[}2\%, 17\%{]}).
+learning goal, followed by the No Goal context, then Performance, with
+the fewest single actions generated in the Presentation condtion.
 
 There was a main efffect of social context, with participants being less
 likely to select the single action when their boss was present
